--- a/app/src/main/res/layout/list_view_adapter.xml
+++ b/app/src/main/res/layout/list_view_adapter.xml
@@ -12,7 +12,7 @@
         android:text="Large Text"
         android:id="@+id/adapter_first_line"
         android:layout_weight="0.05"
-        />
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="fill_parent"
@@ -22,5 +22,5 @@
         android:id="@+id/adapter_second_line"
         android:layout_weight="0.05"
         android:textSize="20dp"
-        />
+        android:textStyle="italic" />
 </LinearLayout>
