--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -24,18 +24,13 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.22">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/add_button"
-            android:id="@+id/addTeamButton"/>
-
     </LinearLayout>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="107dp"
         android:layout_height="wrap_content"
-        android:text="@string/refresh_button"
-        android:id="@+id/refreshButton"/>
+        android:text="@string/add_button"
+        android:id="@+id/addTeamButton"
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
