--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,9 +14,9 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="269dp"
+        android:layout_height="match_parent"
         android:id="@+id/listView"
-        android:layout_weight="0.48"/>
+        />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -25,12 +25,5 @@
         android:layout_weight="0.22">
 
     </LinearLayout>
-
-    <Button
-        android:layout_width="113dp"
-        android:layout_height="64dp"
-        android:text="@string/add_button"
-        android:id="@+id/addTeamButton"
-        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
