--- a/app/src/main/res/layout/team_detail_list_view_adapter.xml
+++ b/app/src/main/res/layout/team_detail_list_view_adapter.xml
@@ -9,26 +9,26 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/detail_teams_playing"
-        android:id="@+id/textView"/>
+        android:id="@+id/team_detail_oppTeam"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/detail_start_time"
-        android:id="@+id/textView2"/>
+        android:id="@+id/team_detail_start_time"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/detail_score"
-        android:id="@+id/textView3"/>
+        android:id="@+id/team_detail_score"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/detail_location"
-        android:id="@+id/textView4"/>
+        android:id="@+id/team_detail_loctaion"/>
 </LinearLayout>
