--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -10,20 +10,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hasbrouckproductions.rhasbrouck.nhltracker.HomeActivity"
     android:orientation="vertical"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="#d0d1d1">
 
     <ListView
         android:layout_width="561dp"
         android:layout_height="183dp"
         android:id="@+id/listView"
-        android:layout_weight="0.78"/>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.22">
-
-    </LinearLayout>
+        android:layout_weight="0.79"
+        android:background="#a7cbd8"/>
 
 </LinearLayout>
