--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -9,7 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hasbrouckproductions.rhasbrouck.nhltracker.TeamDetailActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#d0d1d1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -30,7 +31,8 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="267dp"
-        android:id="@+id/team_detail_list_view"/>
+        android:layout_height="match_parent"
+        android:id="@+id/team_detail_list_view"
+        android:background="#a7cbd8"/>
 
 </LinearLayout>
