--- a/app/src/main/res/layout/team_list_view_adapter.xml
+++ b/app/src/main/res/layout/team_list_view_adapter.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="wrap_content"
+              android:background="#28765a">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -16,13 +17,14 @@
             android:text="Large Text"
             android:id="@+id/addTeam_adapter_first_line"
             android:layout_weight="0.02"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="#ffffff"/>
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/teamCheckBox"
-            />
+            android:buttonTint="#ffffff"/>
     </LinearLayout>
 
     <TextView
@@ -33,5 +35,7 @@
         android:id="@+id/addTeam_adapter_second_line"
         android:layout_weight="0.05"
         android:textSize="20dp"
-        android:textStyle="italic" />
+        android:textStyle="italic"
+        android:allowUndo="false"
+        android:textColor="@color/abc_background_cache_hint_selector_material_light"/>
 </LinearLayout>
