--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hasbrouckproductions.rhasbrouck.nhltracker.TeamDetailActivity"
     android:orientation="vertical"
-    android:background="#d0d1d1">
+    android:background="@drawable/default_background">
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,7 +19,8 @@
         android:text="@string/team_details_team_name"
         android:id="@+id/team_detail_team_name"
         android:textStyle="bold"
-        android:paddingBottom="20dp"/>
+        android:paddingBottom="20dp"
+        android:textColor="#ffffff"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,12 +28,15 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/team_details"
         android:id="@+id/team_detail_team_info"
-        android:paddingLeft="60dp"/>
+        android:paddingLeft="60dp"
+        android:textColor="#ffffff"/>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/team_detail_list_view"
-        android:background="#a7cbd8"/>
+        android:background="#90a7cbd8"
+        android:focusable="false"
+        />
 
 </LinearLayout>
