--- a/app/src/main/res/layout/team_detail_list_view_adapter.xml
+++ b/app/src/main/res/layout/team_detail_list_view_adapter.xml
@@ -4,12 +4,26 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/detail_teams_playing"
-        android:id="@+id/team_detail_oppTeam"/>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/detail_teams_playing"
+            android:id="@+id/team_detail_oppTeam"
+            android:paddingRight="100dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/detail_location"
+            android:id="@+id/team_detail_loctaion"/>
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,17 +32,24 @@
         android:text="@string/detail_start_time"
         android:id="@+id/team_detail_start_time"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/detail_score"
-        android:id="@+id/team_detail_score"/>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/detail_location"
-        android:id="@+id/team_detail_loctaion"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/detail_score_str"
+            android:paddingRight="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/detail_score"
+            android:id="@+id/team_detail_score"/>
+    </LinearLayout>
+
 </LinearLayout>
