--- a/app/src/main/res/layout/list_view_adapter.xml
+++ b/app/src/main/res/layout/list_view_adapter.xml
@@ -16,12 +16,14 @@
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:id="@+id/team_list_image"
-            android:layout_weight="0.00"/>
+            android:layout_weight="0.00"
+            />
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingLeft="20dp">
 
             <TextView
                 android:layout_width="match_parent"
