--- a/app/src/main/res/layout/team_list_view_adapter.xml
+++ b/app/src/main/res/layout/team_list_view_adapter.xml
@@ -8,34 +8,54 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:id="@+id/addTeam_adapter_first_line"
-            android:layout_weight="0.02"
-            android:textStyle="bold"
-            />
+        <ImageView
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            android:id="@+id/team_list_view_image"/>
 
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/teamCheckBox"
-            />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Large Text"
+                    android:id="@+id/addTeam_adapter_first_line"
+                    android:layout_weight="0.02"
+                    android:textStyle="bold"
+                    />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/teamCheckBox"
+                    />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Large Text"
+                android:id="@+id/addTeam_adapter_second_line"
+                android:layout_weight="0.05"
+                android:textSize="20dp"
+                android:textStyle="italic"
+                android:allowUndo="false"
+                />
+        </LinearLayout>
+
     </LinearLayout>
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/addTeam_adapter_second_line"
-        android:layout_weight="0.05"
-        android:textSize="20dp"
-        android:textStyle="italic"
-        android:allowUndo="false"
-        />
 </LinearLayout>
