--- a/app/src/main/res/layout/activity_add_team.xml
+++ b/app/src/main/res/layout/activity_add_team.xml
@@ -22,7 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="359dp"
         android:id="@+id/add_team_list_view"
-        android:background="#90a7cbd8"/>
+        android:background="#90a7cbd8"
+        android:layout_weight="1.06"/>
 
     <Space
         android:layout_width="20px"
