--- a/app/src/main/res/layout/team_detail_list_view_adapter.xml
+++ b/app/src/main/res/layout/team_detail_list_view_adapter.xml
@@ -3,12 +3,14 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#99416b93">
+              android:background="#99416b93"
+              android:paddingBottom="20dp">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -31,7 +33,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/detail_start_time"
-        android:id="@+id/team_detail_start_time"/>
+        android:id="@+id/team_detail_start_time"
+        android:paddingBottom="10dp"/>
 
     <LinearLayout
         android:orientation="horizontal"
