--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -18,6 +18,6 @@
         android:layout_height="183dp"
         android:id="@+id/listView"
         android:layout_weight="0.79"
-        android:background="#90a7cbd8"/>
+        android:background="#9EABB5"/>
 
 </LinearLayout>
