--- a/app/src/main/res/layout/list_view_adapter.xml
+++ b/app/src/main/res/layout/list_view_adapter.xml
@@ -4,7 +4,7 @@
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:weightSum="1"
-              android:background="#99416b93">
+              android:background="#E9F4F1">
 
     <LinearLayout
         android:orientation="horizontal"
