--- a/app/src/main/res/layout/team_list_view_adapter.xml
+++ b/app/src/main/res/layout/team_list_view_adapter.xml
@@ -3,7 +3,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="#99416b93">
+              android:background="#E9F4F1"
+              android:baselineAligned="true">
 
     <LinearLayout
         android:orientation="horizontal"
